tests/grammar/valid/core-use-entry-01.vit
use std/core/types as types_pkg

entry main at core/app {
  give 0
}
