tests/grammar/invalid/entry-missing-at-01.vit
entry main core/app { give 0 }
